--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "idea_guerra",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css":"node-sass --include-path scss scss/main.scss css/main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/Yamiguerra/Idea-Guerra-/issues"
   },
-  "homepage": "https://github.com/Yamiguerra/Idea-Guerra-#readme"
+  "homepage": "https://github.com/Yamiguerra/Idea-Guerra-#readme",
+  "description": "",
+  "devDependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.19"
+  }
 }
